tests/errors/err_unbalanced_parens.bas
10 X = (5 + 3
20 PRINT X
